--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 		</dependency>
 
 	</dependencies>
-	<build>
+	<!-- <build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -62,7 +62,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>
+	</build> -->
 
 	<packaging>war</packaging>
 </project>
