--- a/pom.xml
+++ b/pom.xml
@@ -46,23 +46,20 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- Test Dependencies -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
-	<!-- <build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>com.google.cloud.tools</groupId>
-				<artifactId>appengine-maven-plugin</artifactId>
-				<version>1.3.2</version>
-				<configuration>
-					<version>1</version>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build> -->
+	<!-- <build> <plugins> <plugin> <groupId>org.springframework.boot</groupId> 
+		<artifactId>spring-boot-maven-plugin</artifactId> </plugin> <plugin> <groupId>com.google.cloud.tools</groupId> 
+		<artifactId>appengine-maven-plugin</artifactId> <version>1.3.2</version> 
+		<configuration> <version>1</version> </configuration> </plugin> </plugins> 
+		</build> -->
 
 	<packaging>war</packaging>
 </project>
