--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
 		<artifactId>appengine-maven-plugin</artifactId> <version>1.3.2</version> 
 		<configuration> <version>1</version> </configuration> </plugin> </plugins> 
 		</build> -->
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.google.appengine</groupId>
+				<artifactId>appengine-maven-plugin</artifactId>
+				<version>1.9.9</version>
+			</plugin>
+		</plugins>
+	</build>
 	<packaging>war</packaging>
 </project>
