--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,13 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.3.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.mydeveloperplanet.mygoogleappengineplanet</groupId>
-	<artifactId>demoapp</artifactId>
+	<artifactId>finalDemo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demoapp</name>
+	<packaging>war</packaging>
+	<name>finalDemo</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -19,10 +20,6 @@
 	</properties>
 
 	<dependencies>
-	
-		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-web</artifactId> 
-			</dependency> <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-test</artifactId> 
-			<scope>test</scope> </dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -47,27 +44,28 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- Test Dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
-	<!-- <build> <plugins> <plugin> <groupId>org.springframework.boot</groupId> 
-		<artifactId>spring-boot-maven-plugin</artifactId> </plugin> <plugin> <groupId>com.google.cloud.tools</groupId> 
-		<artifactId>appengine-maven-plugin</artifactId> <version>1.3.2</version> 
-		<configuration> <version>1</version> </configuration> </plugin> </plugins> 
-		</build> -->
+
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>com.google.appengine</groupId>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>appengine-maven-plugin</artifactId>
-				<version>1.9.9</version>
+				<version>1.3.2</version>
+				<configuration>
+					<version>1</version>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-	<packaging>war</packaging>
+
 </project>
